--- a/AutoLayoutTests/Base.lproj/Main.storyboard
+++ b/AutoLayoutTests/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="AutoLayoutTests" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,54 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="nHh-tN-9aC">
+                                <rect key="frame" x="16" y="20" width="175" height="264"/>
+                                <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MjB-Jg-iKr">
+                                <rect key="frame" x="199" y="20" width="160" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="491-1b-Mm1"/>
+                                    <constraint firstAttribute="height" constant="160" id="Qak-L2-4e7"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PPy-Di-yf5">
+                                <rect key="frame" x="16" y="292" width="167.5" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Button A"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="utP-cc-YiP">
+                                <rect key="frame" x="191.5" y="292" width="167.5" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Button B"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="leadingMargin" secondItem="PPy-Di-yf5" secondAttribute="leading" id="4OW-SQ-b3w"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="utP-cc-YiP" secondAttribute="trailing" id="4kv-Zb-6Vj"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="nHh-tN-9aC" secondAttribute="leading" id="CEu-dQ-Xa4"/>
+                            <constraint firstItem="nHh-tN-9aC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="YpT-Rv-M1h"/>
+                            <constraint firstItem="PPy-Di-yf5" firstAttribute="top" relation="greaterThanOrEqual" secondItem="MjB-Jg-iKr" secondAttribute="bottom" constant="8" id="aRs-xa-mIc"/>
+                            <constraint firstItem="utP-cc-YiP" firstAttribute="leading" secondItem="PPy-Di-yf5" secondAttribute="trailing" constant="8" id="ajA-cU-kgg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="MjB-Jg-iKr" secondAttribute="trailing" id="f7f-GS-eDl"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="PPy-Di-yf5" secondAttribute="bottom" constant="8" id="fOj-IC-6ja"/>
+                            <constraint firstItem="PPy-Di-yf5" firstAttribute="height" secondItem="utP-cc-YiP" secondAttribute="height" id="o5L-Z1-Uvd"/>
+                            <constraint firstItem="PPy-Di-yf5" firstAttribute="width" secondItem="utP-cc-YiP" secondAttribute="width" id="p4f-gf-CN5"/>
+                            <constraint firstItem="PPy-Di-yf5" firstAttribute="centerY" secondItem="utP-cc-YiP" secondAttribute="centerY" id="sDE-LQ-pun"/>
+                            <constraint firstItem="MjB-Jg-iKr" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="xQX-fk-5Tc"/>
+                            <constraint firstItem="PPy-Di-yf5" firstAttribute="top" secondItem="nHh-tN-9aC" secondAttribute="bottom" constant="8" id="yIo-wz-Jky"/>
+                            <constraint firstItem="MjB-Jg-iKr" firstAttribute="leading" secondItem="nHh-tN-9aC" secondAttribute="trailing" constant="8" id="zqy-iH-05m"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
